--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
   <div class="container">
     <form id="form" action="/">
       <div class="form-group">
+        <label >Author</label>
+        <input type="text" class="form-control" placeholder="Enter author" id="authorForm">
+      </div>
+      <div class="form-group">
         <label >Title</label>
         <input type="text" class="form-control" placeholder="Enter title" id="titleForm">
       </div>
       <div class="form-group">
         <label> # Pages</label>
-        <input type="number" class="form-control" placeholder="Enter number of pages" id="numberPages">
+        <input type="number" class="form-control" placeholder="Enter number of pages" id="numberForm">
+      </div>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="readForm">
+        <label class="form-check-label" for="readForm">Read</label>
       </div>
       <button id="button" type="button" name="button" class="btn btn-primary">Add Book</button>
     </form>
