complete render function

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       </div>
       <button id="button" type="button" name="button" class="btn btn-primary">Add Book</button>
     </form>
+
+    <div class="container-books"></div>
   </div>
   
   <script src="libraryLogic.js"></script>
