--- a/index.html
+++ b/index.html
@@ -40,6 +40,32 @@
   </div>
 
   <script src="libraryLogic.js"></script>
+  <script>
+    function showForm() {
+      const form = document.getElementById('hideShow');
+      if (form.style.display === 'none') {
+        form.style.display = 'block';
+      } else {
+        form.style.display = 'none';
+      }
+    }
+
+    function deleteBook(index) {
+      myLibrary.splice(index, 1);
+      saveArr(myLibrary);
+      render(myLibrary);
+    }
+
+    function readedBook(index) {
+      if (myLibrary[index].read) {
+        myLibrary[index].read = false;
+      } else {
+        myLibrary[index].read = true;
+      }
+      saveArr(myLibrary);
+      render(myLibrary);
+    }
+  </script>
 </body>
 
 </html>
