--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="container">
-    <button onclick="showForm()">Create a new Book</button>
+    <button id="btn-show-form">Create a new Book</button>
 
 
     <div id="hideShow" style="display:none">
@@ -39,8 +39,6 @@
     <div class="container-books"></div>
   </div>
 
-  <script src="scripts/local_storage.js"></script> 
-  <script src="scripts/dom_manipulation.js"></script> 
   <script src="scripts/library_logic.js"></script>
 </body>
 
