--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     <div class="container-books"></div>
   </div>
 
+  <script src="scripts/local_storage_methods.js"></script>
+  <script src="scripts/dom_manipulation.js"></script>
   <script src="scripts/library_logic.js"></script>
+
 </body>
 
 </html>
