Know when yo create a new book the form resets by itself

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="hideShow" style="display:none">
 
-      <form id="form" action="#" >
+      <form id="form"   >
         <div class="form-group">
           <label >Author</label>
           <input minlength="3" type="text" class="form-control" placeholder="Enter author" id="authorForm">
